--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 旭瑞的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 旭瑞的博客, qiubaiying, 侯旭瑞, iOS, Apple, iPhone"
+keyword: "BY, BY Blog, 旭瑞的博客, houxurui, 侯旭瑞, iOS, Apple, iPhone"
 url: "http://houxurui.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/houxurui/houxurui.github.io.git" # you code repository
