--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BY Blog
 SEOTitle: 旭瑞的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/beijing.jpg
 email: houxurui97@gmail.com
 description: "failure is the mother of success ."
 keyword: "XR Blog, 旭瑞的博客, houxurui, 侯旭瑞, iOS, Apple, iPhone"
@@ -18,11 +18,11 @@ sidebar-avatar: /img/IMG_1896.JPG      # use absolute URL, seeing it's used in b
 
 # SNS settings
 RSS: false
-# weibo_username:     houxurui
-zhihu_username:     houxurui
+weibo_username:     余生不想再将就
+# zhihu_username:     houxurui
 github_username:    houxurui
-facebook_username:  xurui.hou
-jianshu_username:   houxurui
+# facebook_username:  xurui.hou
+# jianshu_username:   houxurui
 #twitter_username:   houxurui
 
 
