--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: 旭瑞的博客 | BY Blog
+title: xurui Blog
+SEOTitle: 旭瑞的博客 | xurui Blog
 header-img: img/beijing.jpg
 email: houxurui97@gmail.com
 description: "failure is the mother of success ."
