--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: xurui Blog
-SEOTitle: 旭瑞的博客 | xurui Blog
+title: 侯旭瑞&杨配
+SEOTitle: 侯旭瑞&杨配 | 侯旭瑞&杨配
 header-img: img/beijing.jpg
 email: houxurui97@gmail.com
-description: "failure is the mother of success ."
-keyword: "XR Blog, 旭瑞的博客, houxurui, 侯旭瑞, iOS, Apple, iPhone"
+description: "白首不分离 ."
+keyword: "XR Blog, 侯旭瑞&杨配, houxurui, 侯旭瑞, iOS, Apple, iPhone"
 url: "http://houxurui.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/houxurui/houxurui.github.io.git" # you code repository
@@ -78,7 +78,7 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
