--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: 侯旭瑞&杨配
 SEOTitle: 侯旭瑞&杨配 | 侯旭瑞&杨配
-header-img: img/beijing.jpg
+header-img: img/222.jpg
 email: houxurui97@gmail.com
 description: "白首不分离 ."
-keyword: "XR Blog, 侯旭瑞&杨配, houxurui, 侯旭瑞, iOS, Apple, iPhone"
+keyword: "XR Blog, 侯旭瑞&杨配, houxurui, 侯旭瑞,"
 url: "http://houxurui.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/houxurui/houxurui.github.io.git" # you code repository
