--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 侯旭瑞&杨配
 SEOTitle: 侯旭瑞&杨配 | 侯旭瑞&杨配
 header-img: img/222.jpg
 email: houxurui97@gmail.com
-description: "白首不分离 ."
+description: "有你的地方就有光 ."
 keyword: "XR Blog, 侯旭瑞&杨配, houxurui, 侯旭瑞,"
 url: "http://houxurui.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -64,7 +64,7 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
+  repo: houxurui.github.io    #仓库名称
   owner: houxurui    #github用户名
   admin:  houxurui
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
@@ -97,18 +97,18 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
-]
+#friends: [
+#    {
+#        title: "WY",
+#        href: "http://zhengwuyang.com"
+#    },{
+#        title: "简书·BY",
+#        href: "http://www.jianshu.com/u/e71990ada2fd"
+#    },{
+#        title: "Apple",
+#        href: "https://apple.com"
+#    },{
+#        title: "Apple Developer",
+#       href: "https://developer.apple.com/"
+#    }
+#]
